src/app/pages/api-key-gen-page/api-key-gen-input-card/api-key-gen-input-card.component.scss
.flex {
  display: flex;
  gap: 8px 32px;
  align-items: center;
}

.wrap {
  flex-wrap: wrap;
}

.input-form-wrapper {
  margin-top: 24px;
}

.input-form {
  width: 144px;
  margin-bottom: 0;

  ::ng-deep .mat-mdc-form-field-bottom-align::before {
    height: 0 !important;
  }

  ::ng-deep .mat-mdc-form-field-subscript-wrapper {
    height: 0;
    margin-top: 0;
  }
}

@media (max-width: 768px) {
  .input-form {
    width: 100%;
  }
}

